chore: setup env file for wagtail

--- a/.env.sample
+++ b/.env.sample
@@ -2,18 +2,19 @@ PROJECT_NAME=privollesru
 
 HOST_PORT=80
 
-DJANGO_DEBUG=1
-DJANGO_USE_SMTP=0
+DJANGO_DEBUG=0
 DJANGO_SECRET_KEY=m8-fpkiu3z+%aa313%9661%p0$k0kj+f6%!mg_i-k4qu#jp_9-
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 DJANGO_LANGUAGE_CODE=en-us
 DJANGO_TIME_ZONE=UTC
 
-# EMAIL_HOST=
-# EMAIL_HOST_USER=
-# EMAIL_HOST_PASSWORD=
-# EMAIL_PORT=
-# EMAIL_USE_SSL=
-# EMAIL_USE_TLS=
+DJANGO_EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+DJANGO_EMAIL_HOST=""
+DJANGO_EMAIL_HOST_USER=""
+DJANGO_EMAIL_HOST_PASSWORD=""
+DJANGO_EMAIL_PORT=""
+DJANGO_EMAIL_USE_SSL=""
+DJANGO_EMAIL_USE_TLS=""
 
-# RECIPIENT_LIST=
+RECIPIENT_LIST=""
+
