chore: setup postgres for wagtail

--- a/.env.sample
+++ b/.env.sample
@@ -18,3 +18,10 @@ DJANGO_EMAIL_USE_TLS=""
 
 RECIPIENT_LIST=""
 
+SQL_ENGINE=django.db.backends.postgresql
+SQL_DATABASE=privollesru
+SQL_USER=privollesru
+SQL_PASSWORD=privollesru
+SQL_HOST=database
+SQL_PORT=5432
+
