--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,12 @@ anyascii==0.3.0
 asgiref==3.5.0
 beautifulsoup4==4.9.3
 certifi==2021.10.8
-charset-normalizer==2.0.11
-Django==3.2.12
+charset-normalizer==2.0.12
+dj-database-url==0.5.0
+Django==4.0.2
 django-filter==21.1
 django-modelcluster==5.2
-django-taggit==1.5.1
+django-taggit==2.1.0
 django-treebeard==4.5.1
 djangorestframework==3.13.1
 draftjs-exporter==2.1.7
@@ -26,9 +27,9 @@ sqlparse==0.4.2
 tablib==3.2.0
 telepath==0.2
 urllib3==1.26.8
-wagtail==2.15.3
+wagtail==2.16.1
 webencodings==0.5.1
-whitenoise==5.3.0
+whitenoise==6.0.0
 Willow==1.4
 xlrd==2.0.1
 XlsxWriter==3.0.2
