--- a/.env.sample
+++ b/.env.sample
@@ -9,14 +9,15 @@ DJANGO_LANGUAGE_CODE=en-us
 DJANGO_TIME_ZONE=UTC
 
 DJANGO_EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
-DJANGO_EMAIL_HOST=""
-DJANGO_EMAIL_HOST_USER=""
-DJANGO_EMAIL_HOST_PASSWORD=""
-DJANGO_EMAIL_PORT=""
-DJANGO_EMAIL_USE_SSL=""
-DJANGO_EMAIL_USE_TLS=""
+# DJANGO_EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+# DJANGO_EMAIL_HOST=
+# DJANGO_EMAIL_HOST_USER=
+# DJANGO_EMAIL_HOST_PASSWORD=
+# DJANGO_EMAIL_PORT=
+# DJANGO_EMAIL_USE_SSL=
+# DJANGO_EMAIL_USE_TLS=
 
-RECIPIENT_LIST=""
+# RECIPIENT_LIST=
 
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=privollesru
