--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -3,3 +3,11 @@ DEBUG=1
 ALLOWED_HOSTS=*
 LANGUAGE_CODE=en-us
 TIME_ZONE=UTC
+EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+EMAIL_HOST=''
+EMAIL_PORT=''
+EMAIL_HOST_USER=''
+EMAIL_HOST_PASSWORD=''
+EMAIL_USE_TLS=0
+EMAIL_USE_SSL=0
+RECIPIENT_LIST=''
