--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-yandex-maps": "^4.6.0",
