chore: add swagger and redoc to nginx conf

--- a/docker/nginx/development/default.conf
+++ b/docker/nginx/development/default.conf
@@ -26,6 +26,14 @@ server {
         try_files $uri @proxy_api;
     }
 
+    location /swagger {
+        try_files $uri @proxy_api;
+    }
+
+    location /redoc {
+        try_files $uri @proxy_api;
+    }
+
     location @proxy_api {
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Url-Scheme $scheme;
